# Arima_financial_forecasting

./: README.md  pyproject.toml
tqnt/: pyproject.toml
tqnt/base/: avy.py
tqnt/io/: logger.py  yfinance.py
tqnt/models/: arima.py
tqnt/utils/: utils.py
